# Easy-plymouth-creator

./: README.md  meson.build  org.gnome.Example.json  sample.py
src/: easy-plymouth-creator-by_sreetx.in  main.py  meson.build
src/color/: warna.py
